--- a/css/index.css
+++ b/css/index.css
@@ -98,40 +98,46 @@
     font-size: 25px;
 
 }
+
 /* LOGO SECTION */
 
-.logo{
-  height: 80px;
+.logo {
+    height: 80px;
 }
-#logo{
+
+#logo {
     width: 80px;
     display: flex;
     margin-left: 102px;
     margin-top: 10px;
 }
-.mail{
+
+.mail {
     float: right;
     margin-right: 111px;
     margin-top: -37px;
 }
-.mail span{
+
+.mail span {
     display: block;
     margin-left: 37px;
     margin-top: -31px;
     font-size: 20px;
 }
-.fa-envelope{
-   color: blue;
-   font-size: 29px;
+
+.fa-envelope {
+    color: blue;
+    font-size: 29px;
 }
-#mail{
+
+#mail {
     text-decoration: none;
     font-size: 20px;
     margin-left: 30px;
     color: black;
 }
 
-/* NavBar section */
+/* NavBar section enquri button */
 .over {
     width: 100%;
     height: 100vh;
@@ -160,15 +166,16 @@
 .login input {
     height: 29px;
     border: 2px solid black;
-   padding-bottom: 5px;
+    padding-bottom: 5px;
 }
-.form-label{
+
+.form-label {
     color: white;
 }
 
 .login button {
     float: right;
-   
+
 }
 
 .show {
@@ -176,7 +183,7 @@
     z-index: 1;
 }
 
-.showlogin{
+.showlogin {
     top: 430%;
 }
 
@@ -195,14 +202,18 @@
     font-size: 25px;
 
 }
-.login h4{
+
+.login h4 {
     color: white;
 }
+
+
 /* Slider section */
 .slider img{
     height: 450px;
 }
-.carousel-control-next{
+
+.carousel-control-next {
     background-color: green;
     height: 30px;
     margin-top: 213px;
@@ -211,17 +222,407 @@
     border-radius: 63%;
     margin-right: 85px;
 }
-.carousel-control-prev{
+
+.carousel-control-prev {
     background-color: green;
     height: 30px;
     margin-top: 213px;
     width: 30px;
     padding: 5px;
-    border-radius: 63%; 
+    border-radius: 63%;
     margin-left: 85px;
 }
 
+/* SLIDER ENQUIR BUTTON */
 
+.enquir {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0%;
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
+}
+
+.log {
+    width: 330px;
+    height: 500px;
+    background-color: rgb(83, 83, 119);
+    padding: 10px;
+    position: absolute;
+    left: 50%;
+    top: -530%;
+    z-index: 9;
+    transition: 2s;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 3px black;
+    transform: translate(-50%, -69%);
+}
+
+.log input {
+    height: 29px;
+    padding-bottom: 5px;
+}
+
+.form-label {
+    color: white;
+}
+
+.view {
+    opacity: 1;
+    z-index: 1;
+}
+
+.viewlog {
+    top: 65%;
+}
+
+.log span {
+    position: absolute;
+    margin-left: 285px;
+    margin-top: -40px;
+    width: 30px;
+    cursor: pointer;
+    height: 30px;
+    line-height: 30px;
+    background-color: #79b3a9;
+    text-align: center;
+    color: rgb(240, 235, 235);
+    border-radius: 50%;
+    font-size: 25px;
+
+}
+
+.log h4 {
+    color: white;
+}
+
+#enquri {
+    background-color: red;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 10px;
+    margin-top: -242px;
+    position: absolute;
+    margin-left: 135px;
+    width: 12%;
+}
+
+/* About us */
+
+.who {
+    display: flex;
+    margin-top: 33px;
+}
+
+#who {
+    margin-left: 111px;
+    margin-top: 90px;
+}
+
+.we {
+    color: blue;
+    font-size: 30px;
+}
+
+#we {
+    width: 342px;
+    font-weight: 160%;
+}
+
+#we span {
+    color: green;
+}
+
+.global {
+    width: 518px;
+    font-size: 20px;
+    color: gray;
+    margin: 5px 0px 5px;
+}
+
+.read button {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 9px;
+    width: 23%;
+    font-size: 19px;
+    cursor: pointer;
+
+}
+
+/*  products section */
+.products{
+    text-align: center;
+    font-size: 44px;
+}
+#products{
+    text-align: center;
+    justify-self: center;
+    color: green;
+    font-size: 30px;
+}
+
+.carditem{
+    display: flex;
+    height: 400px;
+}
+.card-img-top{
+    width: 464px;
+    height: 211px;
+   
+}
+.card-title {
+    margin-bottom: .5rem;
+    text-align: center;
+}
+.card{
+    margin-left: 130px;
+    border: none;
+    width: 29rem;
+    box-shadow: 2px 2px 2px 2px black;
+}
+#carouselExampleDark{
+    background-color: rgb(236, 204, 164);
+    padding: 20px;
+}
+.carousel-control1{
+    margin-top: -200px;
+    background-color: green;
+    border-radius: 50%;
+   padding: 5px;
+    border: none;
+    position: absolute;
+    
+}
+.carousel-control2{
+    margin-top: -200px;
+    background-color: green;
+    border-radius: 50%;
+    float: right;
+    border: none;
+    padding: 5px;
+    
+}
+
+/* service */
+.service {
+    background-color: rgb(120, 143, 143);
+    margin-top: 30px;
+    padding-bottom: 30px;
+}
+
+
+#service {
+color: rgb(45, 45, 247);
+padding-top: 30px;
+margin-left: 90px;
+}
+
+#ser {
+font-size: 30px;
+width: 757px;
+margin-left: 91px;
+font-weight: 600;
+}
+
+#ser span {
+color: green;
+}
+
+.row {
+margin-left: -23px;
+width: 1259px;
+padding-left: 143px;
+
+}
+
+.card1 {
+background-color: white;
+border-radius: 10px;
+height: 360px;
+}
+
+.service img {
+width: 191px;
+height: 90px;
+padding-top: 10px;
+padding-left: 67px;
+}
+
+/* Why choose us */
+
+#why {
+    margin-top: 40px;
+    text-align: center;
+    color: blue;
+}
+
+#us {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+    width: 784px;
+    margin-left: 250px;
+}
+
+#us span {
+    color: green;
+}
+
+.us {
+    display: flex;
+}
+
+.us img {
+    margin-left: 196px;
+    margin-top: 87px;
+    width: 300px;
+    height: 250px;
+
+}
+
+.us p {
+    width: 686px;
+    font-size: 23px;
+    margin-left: 229px;
+    margin-top: 6px;
+}
+
+.most {
+
+    float: right;
+    width: 615px;
+    font-size: 16px;
+    margin-right: 38px;
+    margin-top: -116px;
+}
+
+/* footer section */
+
+
+footer {
+    background-color: rgb(218, 202, 202);
+    padding: 40px;
+    margin-top: 100px;
+
+}
+
+.footer {
+    display: flex;
+}
+
+#footer img {
+    width: 200px;
+    height: 100px;
+}
+
+#footer {
+    margin-left: 70px;
+
+}
+
+#footer p {
+    width: 451px;
+    padding-top: 10px;
+    color: black;
+    font-size: 20px;
+}
+
+.useful {
+    margin-left: 93px;
+}
+
+.quick {
+    padding-left: 220px;
+}
+
+ul {
+    list-style: none;
+}
+
+li a {
+    text-decoration: none;
+    color: black;
+}
+
+#useful {
+    font-size: 20px;
+}
+
+a:hover {
+    color: green;
+}
+
+.contact {
+    display: flex;
+    margin-left: 65px;
+    margin-top: 20px;
+}
+
+#contact .fa-phone {
+    margin-top: 4px;
+    margin-left: -2px;
+    color: blue;
+    position: absolute;
+}
+
+#contact {
+    margin-top: 46px;
+    margin-left: -79px;
+    margin-right: 200px;
+}
+
+.fa-location-dot {
+    color: rgb(31, 31, 202);
+    padding-right: 20px;
+}
+
+#register {
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+
+.register {
+    width: 298px;
+    font-weight: 200;
+    margin-left: 32px;
+    padding: 5px;
+}
+
+#mo {
+    margin-left: 27px;
+}
+
+#busylogo {
+    width: 138px;
+    height: 60px;
+    float: right;
+    margin-right: 50px;
+    margin-bottom: 10px;
+}
+
+.footer-font {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.footer-font a i {
+    padding-left: 20px;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+#copy {
+    padding-top: 20px;
+    margin-left: 206px;
+    font-size: 20px;
+    color: black;
+}
 
 
 
@@ -242,7 +643,7 @@
     }
 
     .fa-phone {
-        margin-left: 59px;
+        margin-left: 141px;
         position: absolute;
     }
 
@@ -252,8 +653,9 @@
     }
 
     #no {
-        margin-left: 37px;
-        font-size: 12px;
+        margin-left: 163px;
+        position: absolute;
+        font-size: 16px;
     }
 
     .loginform {
@@ -263,6 +665,7 @@
         top: -50px;
         transform: translate(-50%, -89%);
     }
+
     .showloginform {
         top: 92%;
     }
@@ -280,36 +683,264 @@
         color: rgb(240, 235, 235);
         border-radius: 50%;
         font-size: 20px;
-    
+
     }
+
     /* Logo section */
-    #logo{
+    #logo {
         margin-left: 22px;
     }
-    .mail{
-       display: none;
-    }
-    /* Enqurie Button */
-    header{
-        margin-top: -39px;
-    
-    }
-    .login{
+
+    .mail {
         display: none;
     }
 
-   /* Slider section */
+    /* Enqurie Button */
+    header {
+        margin-top: -39px;
 
-   .slider img{
-    height: 250px;
-}
-.carousel-control-next{
-    margin-top: 112px;
-    margin-right: 6px;
-}
-.carousel-control-prev{
-    margin-top: 112px;
-    margin-left: 6px;
-}
+    }
+
+    .login {
+        display: none;
+    }
+
+    /* Slider section */
+
+    .slider img {
+        height: 250px;
+    }
+
+    .carousel-control-next {
+        margin-top: 112px;
+        margin-right: 6px;
+    }
+
+    .carousel-control-prev {
+        margin-top: 112px;
+        margin-left: 6px;
+    }
+
+    /* /* slider enquri button * */
+
+    .viewlog {
+        top: 80%;
+    }
+
+    #enquri {
+        margin-top: -144px;
+        margin-left: 54px;
+        width: 32%;
+    }
+
+    /* About Us */
+    #who {
+        display: none;
+    }
+
+    .we-are {
+        margin-left: 78px;
+    }
+
+    /* Products section */
+   
+    .carditem{
+        display: block;
+        height: 400px;
+    }
+    .card-img-top{
+        width: 400px;
+        height: 211px;
+       
+    }
+    .card-title {
+        margin-bottom: .5rem;
+        text-align: center;
+    }
+    .card{
+        margin-left: auto;
+        border: none;
+        width: 25rem;
+    }
+    .carousel-control{
+        margin-top: 100px;
+    }
+    .carousel-control{
+        margin-top: 100px;
+    }
+
+    /* Service */
+    .service {
+        padding-left: 48px;
+        height: 528px;
+    }
+
+    #service {
+        text-align: center;
+        margin-left: 20px;
+    }
+
+    #ser {
+        font-size: 17px;
+        width: 302px;
+        text-align: center;
+        margin-left: 69px;
+    }
+
+    #ser span {
+        color: green;
+    }
+
+    .row {
+        width: 420px;
+        padding-left: 10px;
+
+    }
+
+    #row1 {
+        display: none;
+    }
+
+    #row2 {
+        display: flex;
+    }
+
+    .card1 {
+        background-color: white;
+        border-radius: 10px;
+        height: 300px;
+    }
+
+    .service img {
+        width: 238px;
+        height: 90px;
+        padding-top: 12px;
+        position: static;
+        padding-left: 166px;
+    }
+    #carousel-control-prev{
+        margin-top: 192px;
+        margin-left: -38px;
+        position: relative;
     
+    }
+
+    /* Why choose us */
+    #whyChoose{
+        height: 784px;
+    }
+    #why {
+        text-align: center;
+        color: blue;
+    }
+
+    #us {
+        font-size: 13px;
+        text-align: center;
+        margin-left: 91px;
+        width: 261px;
+    }
+
+    #us span {
+        color: green;
+    }
+
+    .us {
+        display: block;
+    }
+
+    .us img {
+        margin-left: 179px;
+        margin-top: -37px;
+        width: 97px;
+        height: 91px;
+    }
+
+    .us p {
+        width: 363px;
+        font-size: 20px;
+        margin-left: 55px;
+        margin-top: 1px;
+    }
+    
+
+    .most {
+        width: 501px;
+        position: absolute;
+        margin-left: -17px;
+        font-size: 20px;
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+
+    /* FOOTER SECTION */
+    footer {
+        width: 100%;
+    }
+
+    .footer {
+        display: block;
+        margin: 5px;
+    }
+
+    #footer p {
+        width: 433px;
+        font-size: 30px;
+        margin-left: -76px;
+    }
+
+    .useful {
+        margin-top: 26px;
+        margin-left: -2px;
+        font-size: 30px;
+    }
+
+    .quick {
+        margin-top: 20px;
+        font-size: 30px;
+        margin-left: -222px;
+    }
+
+    .contact h2 {
+        margin-left: -61px
+    }
+
+    .contact {
+        display: block;
+        margin-left: 65px;
+        margin-top: 42px;
+    }
+
+    #contact {
+        margin-top: 15px;
+        margin-left: -79px;
+        margin-right: 200px;
+    }
+
+    .fa-location-dot {
+        color: rgb(31, 31, 202);
+        padding-right: 20px;
+    }
+
+    #register {
+        font-weight: bold;
+        padding-bottom: 5px;
+    }
+
+    .register {
+        width: 298px;
+        font-weight: 200;
+        margin-left: 32px;
+        padding: 5px;
+    }
+
+    #busylogo {
+        margin-top: 20px;
+        margin-right: 1px;
+    }
+
+    #copy {
+        margin-left: -5px;
+        width: 433px;
+    }
 }
