--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,11 @@
 }
 
 /* NavBar section enquri button */
+.nav-link :hover {
+    color: red;
+
+}
+
 .over {
     width: 100%;
     height: 100vh;
@@ -207,9 +212,17 @@
     color: white;
 }
 
+.now {
+    background-color: red;
+    color: white;
+    border-radius: 6px;
+    border: none;
+    padding: 5px;
+}
+
 
 /* Slider section */
-.slider img{
+.slider img {
     height: 450px;
 }
 
@@ -356,102 +369,114 @@
 }
 
 /*  products section */
-.products{
+.products {
     text-align: center;
     font-size: 44px;
 }
-#products{
+
+#products {
     text-align: center;
     justify-self: center;
     color: green;
     font-size: 30px;
 }
 
-.carditem{
+.carditem {
     display: flex;
     height: 400px;
 }
-.card-img-top{
+
+.card-img-top {
     width: 464px;
     height: 211px;
-   
+
 }
+
 .card-title {
     margin-bottom: .5rem;
     text-align: center;
 }
-.card{
+
+.card {
     margin-left: 130px;
     border: none;
     width: 29rem;
     box-shadow: 2px 2px 2px 2px black;
 }
-#carouselExampleDark{
-    background-color: rgb(236, 204, 164);
+
+#carouselExampleDark {
+    background-color: rgb(243 243 243);
     padding: 20px;
 }
-.carousel-control1{
+
+.carousel-control1 {
     margin-top: -200px;
-    background-color: green;
+    background-color: rgb(181, 241, 181);
     border-radius: 50%;
-   padding: 5px;
+    padding: 5px;
     border: none;
     position: absolute;
-    
+
 }
-.carousel-control2{
+
+.carousel-control2 {
     margin-top: -200px;
-    background-color: green;
+    background-color: rgb(181, 241, 181);
     border-radius: 50%;
     float: right;
     border: none;
     padding: 5px;
-    
+
+}
+
+.card-text {
+    font-family: monospace;
 }
 
 /* service */
 .service {
-    background-color: rgb(120, 143, 143);
+    background-color: rgb(199 241 241);
+    ;
     margin-top: 30px;
     padding-bottom: 30px;
 }
 
 
 #service {
-color: rgb(45, 45, 247);
-padding-top: 30px;
-margin-left: 90px;
+    color: rgb(45, 45, 247);
+    padding-top: 30px;
+    margin-left: 90px;
 }
 
 #ser {
-font-size: 30px;
-width: 757px;
-margin-left: 91px;
-font-weight: 600;
+    font-size: 30px;
+    width: 757px;
+    margin-left: 91px;
+    font-weight: 600;
 }
 
 #ser span {
-color: green;
+    color: green;
 }
 
 .row {
-margin-left: -23px;
-width: 1259px;
-padding-left: 143px;
+    margin-left: -23px;
+    width: 1259px;
+    padding-left: 143px;
 
 }
 
 .card1 {
-background-color: white;
-border-radius: 10px;
-height: 360px;
+    background-color: white;
+    border-radius: 10px;
+    height: 360px;
 }
 
 .service img {
-width: 191px;
-height: 90px;
-padding-top: 10px;
-padding-left: 67px;
+    width: 191px;
+    height: 90px;
+    padding-top: 10px;
+    padding-left: 67px;
 }
 
 /* Why choose us */
@@ -487,6 +512,7 @@ padding-left: 67px;
 }
 
 .us p {
+    font-family: monospace;
     width: 686px;
     font-size: 23px;
     margin-left: 229px;
@@ -499,16 +525,17 @@ padding-left: 67px;
     width: 615px;
     font-size: 16px;
     margin-right: 38px;
-    margin-top: -116px;
+    margin-top: -70px;
+    font-family: cursive;
 }
 
 /* footer section */
 
 
 footer {
-    background-color: rgb(218, 202, 202);
+    background-color: #efefef;
     padding: 40px;
-    margin-top: 100px;
+    margin-top: 228px;
 
 }
 
@@ -516,9 +543,12 @@ footer {
     display: flex;
 }
 
+
 #footer img {
-    width: 200px;
-    height: 100px;
+    width: 406px;
+    height: 255px;
+    margin-top: -114px;
+    ;
 }
 
 #footer {
@@ -531,6 +561,7 @@ footer {
     padding-top: 10px;
     color: black;
     font-size: 20px;
+    margin-top: -55px;
 }
 
 .useful {
@@ -538,7 +569,7 @@ footer {
 }
 
 .quick {
-    padding-left: 220px;
+    padding-left: 106px;
 }
 
 ul {
@@ -743,29 +774,34 @@ a:hover {
     }
 
     /* Products section */
-   
-    .carditem{
+
+    .carditem {
         display: block;
         height: 400px;
     }
-    .card-img-top{
+
+    .card-img-top {
         width: 400px;
         height: 211px;
-       
+
     }
+
     .card-title {
         margin-bottom: .5rem;
         text-align: center;
     }
-    .card{
+
+    .card {
         margin-left: auto;
         border: none;
         width: 25rem;
     }
-    .carousel-control{
+
+    .carousel-control {
         margin-top: 100px;
     }
-    .carousel-control{
+
+    .carousel-control {
         margin-top: 100px;
     }
 
@@ -818,17 +854,19 @@ a:hover {
         position: static;
         padding-left: 166px;
     }
-    #carousel-control-prev{
+
+    #carousel-control-prev {
         margin-top: 192px;
         margin-left: -38px;
         position: relative;
-    
+
     }
 
     /* Why choose us */
-    #whyChoose{
+    #whyChoose {
         height: 784px;
     }
+
     #why {
         text-align: center;
         color: blue;
@@ -862,7 +900,7 @@ a:hover {
         margin-left: 55px;
         margin-top: 1px;
     }
-    
+
 
     .most {
         width: 501px;
