--- a/css/contactus.css
+++ b/css/contactus.css
@@ -1,86 +1,4 @@
-/* Upgrade For Software */
-/* #upgrade {
-    position: relative;
-    float: right;
-    margin-right: -140px;
-    margin-top: 190px;
-    padding: 8px;
-}
 
-.upgrade {
-    background-color: blue;
-    color: white;
-    border: none;
-    position: fixed;
-    border-radius: 6px;
-
-}
-
-.po {
-    width: 500px;
-    background-color: rgb(70, 70, 240);
-    border-radius: 10px;
-    position: absolute;
-    top: 0%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.1);
-    padding: 0 30px 30px;
-    visibility: hidden;
-    transition: transform 1s, top 1s;
-}
-
-.po span {
-    float: right;
-    color: white;
-    font-size: 30px;
-    margin-top: -50px;
-    cursor: pointer;
-
-}
-
-.po input {
-    width: 420px;
-    margin: 8px;
-    border: none;
-    padding-left: 20px;
-    border-radius: 6px;
-    height: 30px;
-}
-
-.po button {
-    float: right;
-    background-color: rgb(162, 139, 184);
-    color: white;
-    border: none;
-    border-radius: 6px;
-    width: 90px;
-}
-
-.po textarea {
-
-    width: 420px;
-    margin: 8px;
-    border: none;
-    padding-left: 20px;
-    border-radius: 6px;
-
-}
-
-.po h2 {
-    color: white;
-}
-
-.po hr {
-    background-color: white;
-    height: 5px;
-}
-
-.open-po {
-    visibility: visible;
-    top: -50%;
-    transform: translate(-150%, -90%) scale(1);
-    position: absolute;
-} */
 
 .CONTACT {
     display: flex;
@@ -236,4 +154,9 @@
     padding-top: 25px;
     padding-bottom: 25px;
     background-color: rgb(185, 181, 181);
+}
+footer{
+    background-color: #efefef;
+    padding: 40px;
+    margin-top: 0px;
 }
