--- a/css/contactus.css
+++ b/css/contactus.css
@@ -16,8 +16,8 @@
 
 .CONTACT img {
     width: 133px;
-    height: 137px;
-    margin-top: -42px;
+    height: 69px;
+    margin-top: -5px;
     margin-left: 772px;
 }
 
@@ -159,4 +159,136 @@ footer{
     background-color: #efefef;
     padding: 40px;
     margin-top: 0px;
+}
+
+@media (max-width:600px) {
+
+    .CONTACT {
+        height: 64px;
+    }
+    
+    .CONTACT h2 {
+        margin-left: 33px;
+        width: 253px;
+        font-size: 33px;
+        margin-top: 0px;
+    }
+    
+    .CONTACT img {
+        width: 124px;
+        height: 61px;
+        margin-top: -2px;
+        margin-left: 119px;
+    }
+    
+    #CONTACT {
+        margin-left: 95px;
+        position: absolute;
+    
+    }
+   
+    #CONTACT input {
+        width: 320px;
+        margin: 8px;
+        height: 35px;
+        padding-left: 20px;
+        opacity: 0.6;
+    }
+    
+    #CONTACT textarea {
+        width: 320px;
+        margin: 8px;
+        padding-left: 20px;
+        opacity: 0.6;
+    }
+    
+    #CONTACT button {
+        margin-left: 69px;
+    }
+    
+    /* Add MAP */
+    .map {
+        margin-top: 352px;
+        display: flex;
+        margin-left: -34px;
+        position: absolute;
+    
+    }
+    
+    #map {
+        width: 170px;
+        height: 219px;
+        margin-left: 64px;
+        background-color: #efefef;
+     
+    }
+    
+    #map i {
+        margin-left: 51px;
+    }
+    
+    #map h5 {
+        text-align: center;
+    }
+    
+    #map p {
+        text-align: center;
+    }
+    
+    #ma {
+        width: 170px;
+        height: 219px;
+        margin-left: 12px;
+        background-color: #efefef;
+    }
+    
+    #ma i {
+        margin-left: 49px;
+    }
+    
+    #ma h5 {
+        text-align: center;
+    }
+    
+    #ma p {
+        text-align: center;
+        font-size: 20px;
+    }
+    
+    #m {
+        width: 170px;
+        height: 219px;
+        margin-left: 17px;
+        background-color: #efefef;
+    }
+    
+    #m i {
+        margin-left: 52px;
+    }
+    
+    #m h5 {
+        text-align: center;
+    }
+    
+    #m p {
+        text-align: center;
+        font-size: 13px;
+    }
+    
+    /* MAP ADD */
+    .contain{
+        margin-top: 585px;
+        width: 610px;
+    }
+
+    footer{
+        background-color: #efefef;
+        width: 102%;
+        padding-top: 137px !important;
+        margin-top: 17px !important;
+    }
+    header {
+        margin-top: -21px;
+        padding-left: 1px;
+    }
 }
