--- a/css/privacy.css
+++ b/css/privacy.css
@@ -117,3 +117,38 @@ footer{
     padding: 40px;
     margin-top: 0px;
 }
+
+@media (max-width:600px) {
+   
+    .privacy img {
+        width: 95%;
+        height: 79vh;
+    }
+    
+ 
+    
+    
+    /* policy */
+    .service-software {
+        margin-top: 88px;
+        margin-left: 30px;
+        position: absolute;
+    }
+    
+    #service-software {
+        font-size: 14px;
+        width: 529px;
+    
+    }
+    
+    .service-software h4 {
+        margin-left: 3px;
+    }
+    
+ 
+    footer{
+        background-color: #efefef;
+        padding: 40px;
+        margin-top: 5053px;
+    }
+}
