--- a/css/contactus.css
+++ b/css/contactus.css
@@ -168,21 +168,22 @@ footer{
     }
     
     .CONTACT h2 {
-        margin-left: 33px;
+      
+        margin-left: 6px;
         width: 253px;
-        font-size: 33px;
-        margin-top: 0px;
+        font-size: 26px;
+        margin-top: 6px;
     }
     
     .CONTACT img {
         width: 124px;
         height: 61px;
         margin-top: -2px;
-        margin-left: 119px;
+        margin-left: -12px;
     }
     
     #CONTACT {
-        margin-left: 95px;
+        margin-left: 37px;
         position: absolute;
     
     }
@@ -208,23 +209,23 @@ footer{
     
     /* Add MAP */
     .map {
-        margin-top: 352px;
-        display: flex;
-        margin-left: -34px;
+        margin-top: 356px;
+        display: block;
+        margin-left: 27px;
         position: absolute;
     
     }
     
     #map {
-        width: 170px;
+        width: 338px;
         height: 219px;
-        margin-left: 64px;
+        margin-left: -1px;
         background-color: #efefef;
      
     }
     
     #map i {
-        margin-left: 51px;
+        margin-left: 137px;
     }
     
     #map h5 {
@@ -233,17 +234,19 @@ footer{
     
     #map p {
         text-align: center;
+        font-size: 20px;
     }
     
     #ma {
-        width: 170px;
+        width: 335px;
+        margin-top: 11px;
         height: 219px;
-        margin-left: 12px;
+        margin-left: -1px;
         background-color: #efefef;
     }
     
     #ma i {
-        margin-left: 49px;
+        margin-left: 137px;
     }
     
     #ma h5 {
@@ -256,14 +259,15 @@ footer{
     }
     
     #m {
-        width: 170px;
+        width: 335px;
+        margin-top: 11px;
         height: 219px;
-        margin-left: 17px;
+        margin-left: -1px;
         background-color: #efefef;
     }
     
     #m i {
-        margin-left: 52px;
+        margin-left: 137px;
     }
     
     #m h5 {
@@ -272,13 +276,19 @@ footer{
     
     #m p {
         text-align: center;
-        font-size: 13px;
+        font-size: 20px;
     }
     
     /* MAP ADD */
     .contain{
-        margin-top: 585px;
-        width: 610px;
+        margin-top: 1051px;
+        width: 385px;
+        margin-left: 3px;
+        position: relative;
+    }
+    #upgrade {
+        z-index: 1;
+        display: none;
     }
 
     footer{
