--- a/css/leranBusy.css
+++ b/css/leranBusy.css
@@ -278,12 +278,13 @@ footer {
     #learn {
         margin: 27px;
         font-weight: 500;
+        text-align: center;
     }
 
     #learnbusy {
         float: right;
         width: 254px;
-        margin-right: 188px;
+        margin-right: 73px;
         margin-top: -10px;
         height: 181px;
     }
@@ -294,12 +295,11 @@ footer {
         background-color: #7171e3;
         color: white;
         border: none;
-        width: 190px;
+        width: 167px;
         margin-top: 20px;
-        margin-left: 82px;
+        margin-left: 1px;
         border-radius: 10px;
         padding: 10px;
-        cursor: pointer;
     }
 
 
@@ -328,7 +328,7 @@ footer {
 
     .open-popup {
         visibility: visible;
-        top: 165%;
+        top: 63%;
         transform: translate(-50%, -50%) scale(1);
         position: absolute;
     }
@@ -370,7 +370,7 @@ footer {
 
     .open-pop {
         visibility: visible;
-        top: 165%;
+        top: 48%;
         transform: translate(-50%, -50%) scale(1);
         position: absolute;
     }
@@ -538,7 +538,7 @@ footer {
         margin-top: 20px;
     }
     #footer p {
-        width: 534px;
+        width: 365px;
         font-size: 21px;
         margin-left: -34px;
         margin-top: -12px;
